YAML manifest for a pod/pod.hostpath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hostpath-full-access
spec:
  volumes:
  - name: host-root
    hostPath:
      path: /
  containers:
  - name: node-explorer
    image: alpine
    command: ["sleep", "9999999999"]
    volumeMounts:
    - name: host-root
      mountPath: /host
