YAML manifest for a pod/pod.kiada-config.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kiada-config
spec:
  containers:
  - name: kiada
    image: luksa/kiada:0.4
    env:
    - name: INITIAL_STATUS_MESSAGE
      valueFrom:
        configMapKeyRef:
          name: kiada-config-map
          key: status-message
          optional: true    # The container can be executed even if the config map or key is missing.
