YAML manifest for a pod/pod.kiada.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kiada
spec:
  containers:
    name: kiada
    image: lisping/kiada:0.1
    ports:
      ContainerPort: 8080
