YAML manifest for a pod/pod.quiz.emptydir.init.yaml
apiVersion: v1
kind: Pod
metadata:
  name: quiz
spec:
  volumes:
  - name: initdb
    emptyDir: {}
  - name: quiz-data
    emptyDir: {}

  initContainers:
  - name: installer
    image: luksa/quiz-initdb-script-installer:0.1
    volumeMounts:
    - name: initdb
      mountPath: /initdb.d
  
  containers:
  - name: quiz-api
    image: luksa/quiz-api:0.1
    ports:
    - name: http
      containerPort: 8080

  - name: mongo
    image: mongo
    volumeMounts:
    - name: quiz-data
      mountPath: /data/db
    - name: initdb
      mountPath: /docker-entrypoint-initdb.d/
      readOnly: true
