YAML manifest for a pod/pod.quiz.novolume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: quiz-novolume

spec:
  containers:
  - name: quiz-api
    image: luksa/quiz-api:0.1
    ports:
    - name: http
      containerPort: 8080
  - name: mongo
    image: mongo
