YAML manifest for a pod/pod.quiz.pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: quiz-pvc
spec:
  volumes:
  - name: quiz-data
    persistentVolumeClaim: 
      claimName: quiz-data

  containers:
  - name: quiz-api
    image: luksa/quiz-api:0.1
    ports:
    - name: http
      containerPort: 8080
      
  - name: mongo
    image: mongo
    volumeMounts:
    - name: quiz-data
      mountPath: /data/db
