YAML manifest for a pod/pod.quote.yaml
apiVersion: v1
kind: Pod
metadata:
  name: quote
spec:
  volumes:
  - name: shared
    emptyDir: {}

  containers:
  - name: quote-writer
    image: luksa/quote-writer:0.1
    volumeMounts:
    - name: shared
      mountPath: /var/local/output

  - name: ngnix
    image: nginx:alpine
    ports:
    - name: http
      containerPort: 8080
    volumeMounts:
    - name: shared
      mountPath: /usr/share/nginx/html
      readOnly: true
